# scryfall-mcp

./: .coverage  README.md  pyproject.toml  scryfall.py
.github/workflows/: ci.yml
mcp_server/: scryfall.py
tests/: test_scryfall.py
