[project]
name = "mcp-server"
version = "0.1.0"
description = "MCP server for the Scryfall API"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "mcp[cli]>=1.6.0",
    "httpx>=0.27.0"
]

[tool.pytest.ini_options]
python_files = "test_*.py"
addopts = "-ra -q"

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-asyncio",
    "pytest-httpx",
    "respx",
    "pytest-cov"
]
